--- a/src/components/works/works.scss
+++ b/src/components/works/works.scss
@@ -1,3 +1,72 @@
 .works {
     background-color: #AC8DAF;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    .slider {
+        height: 350px;
+        display: flex;
+        position: absolute;
+        left: 0;
+
+        .container {
+            width: 100vw;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            .item {
+                width: 700px;
+                height: 100%;
+                background-color: #fff;
+                border-radius: 20px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+
+                .left {
+                    flex: 4;
+                    height: 80%;
+                    background-color: brown;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+
+                    .leftContainer {
+                        width: 90%;
+                        height: 70%;
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: space-between;
+                        
+                         .imgContainer {
+                             width: 40px;
+                             height: 40px;
+                             border-radius: 50%;
+                             background-color: coral;
+                             display: flex;
+                             align-items: center;
+                             justify-content: center;
+
+                             img {
+                                 width: 25px;
+                             }
+                         }
+                       
+                    }
+                }
+
+                .right {
+                    flex: 8;
+                    height: 100%;
+                    background-color: rgb(255, 0, 191);
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+
+                }
+            }
+        }
+    }
 }
