--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -77,7 +77,8 @@
     a {
         position: absolute;
         bottom: 20px;
-        left: 40%;
+        left: 30%;
+        transform: rotate(90deg);
         
        
         img {
