--- a/src/components/works/works.scss
+++ b/src/components/works/works.scss
@@ -63,7 +63,9 @@
                              width: 40px;
                              height: 40px;
                              border-radius: 50%;
-                             background-color: rgb(235, 191, 224);
+                             border-style: solid;
+                             border-color: blueviolet;
+                             background-color: rgb(199, 171, 199);
                              display: flex;
                              align-items: center;
                              justify-content: center;
